# tw-lottery-recommandation

./: .gitignore  CLAUDE.md  README.md  cli.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
analyzer/: analyzer.py
data/: db.py
ml/: dataset.py  model.py  predict.py  train.py
scraper/: scraper.py
tests/: test_analyzer.py  test_cli.py  test_dataset.py  test_db.py  test_scraper.py
tests/fixtures/: sample_page.html  sample_response.json
