[project]
name = "tw-lottery-recommandation"
version = "0.1.0"
description = "台灣彩券開獎資料分析與號碼推薦工具"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "requests>=2.33.1",
    "rich>=14.3.3",
    "torch>=2.11.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[project.scripts]
lottery = "cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scraper", "analyzer", "data", "ml"]
include = ["cli.py"]
